@@ -1,6 +1,10 @@
 Changes since version 3.2.0
 ---------------------------
 
+- IceGrid now allows defining an object adapter with a replica group
+  from an other IceGrid application than the one where the object
+  adapter is defined.
+
 - Changed to the throughput demo to better support cross-language
   testing.
 
